typechecker: Refactor CallIndexExpr handling